@startuml

title __ACCOUNT's Class Diagram__\n

  namespace com.example.foodonate {
    namespace account {
      class com.example.foodonate.account.LoginFragment {
          - TAG : String
          - btnLogin : Button
          - edtPassword : EditText
          - edtPhone : EditText
          - firstname : String
          - lastname : String
          - password : String
          - phoneNo : String
          - tvSignUp : TextView
          + LoginFragment()
          + onClick()
          + onCreate()
          + onCreateView()
          - loginCall()
          - validateInputs()
      }
    }
  }
  

  namespace com.example.foodonate {
    namespace account {
      class com.example.foodonate.account.ProfileFragment {
          - bmp : Bitmap
          - btnUpdate : Button
          - imgProfile : CircleImageView
          - phoneNo : String
          - profilePicture : String
          - toolbar : MaterialToolbar
          - tvName : TextView
          - tvPhoneNo : TextView
          + ProfileFragment()
          + onCreate()
          + onCreateView()
          - profilePictureCall()
          - userCall()
      }
    }
  }
  

  namespace com.example.foodonate {
    namespace account {
      class com.example.foodonate.account.SelectProfilePictureFragment {
          - CHOOSE_FROM_CAMERA : Integer
          - CHOOSE_FROM_GALLERY : Integer
          - btnSelect : Button
          - builder : Builder
          - file_name : String
          - firstname : String
          - imagePath : String
          - imgPP : ImageView
          - isImageUploaded : boolean
          - lastname : String
          - password : String
          - phone : String
          - tvSkip : TextView
          + SelectProfilePictureFragment()
          + onActivityResult()
          + onClick()
          + onCreate()
          + onCreateView()
          - checkCameraPermission()
          - getSignUpInfoFromSharedPreference()
          - popUpSelectFromCameraOrGallery()
          - registerCall()
      }
    }
  }
  

  namespace com.example.foodonate {
    namespace account {
      class com.example.foodonate.account.SignUpFragment {
          - btnNext : Button
          - edtFirstname : EditText
          - edtLastname : TextView
          - edtPassword : TextView
          - edtPhone : TextView
          - firstname : String
          - lastname : String
          - password : String
          - phone : String
          - tvLogin : TextView
          + SignUpFragment()
          + onCreate()
          + onCreateView()
          - getValuesFromEditText()
          - storeToSharedPreference()
          - validateInputs()
      }
    }
  }
  

  namespace com.example.foodonate {
    namespace account {
      class com.example.foodonate.account.UpdateProfileActivity {
          - btnCancel : Button
          - btnUpdate : Button
          - confirmPassword : String
          - edtConfirmPassword : EditText
          - edtFirstname : EditText
          - edtLastname : EditText
          - edtPassword : EditText
          - edtPhone : EditText
          - firstname : String
          - lastname : String
          - password : String
          - phone : String
          - profilePicture : String
          # onCreate()
          - getInputValues()
          - getValuesFromIntent()
          - validateInput()
      }
    }
  }
  

  com.example.foodonate.account.LoginFragment .up.|> android.view.View.OnClickListener
  com.example.foodonate.account.LoginFragment -up-|> androidx.fragment.app.Fragment
  com.example.foodonate.account.ProfileFragment -up-|> androidx.fragment.app.Fragment
  com.example.foodonate.account.SelectProfilePictureFragment .up.|> android.view.View.OnClickListener
  com.example.foodonate.account.SelectProfilePictureFragment -up-|> androidx.fragment.app.Fragment
  com.example.foodonate.account.SelectProfilePictureFragment o-- com.example.foodonate.account.uploadImageDevelopment.UploadImageBLL : uploadImageBLL
  com.example.foodonate.account.SignUpFragment -up-|> androidx.fragment.app.Fragment
  com.example.foodonate.account.UpdateProfileActivity -up-|> androidx.appcompat.app.AppCompatActivity


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
